--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -28,9 +28,49 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pandoc tar
           
+      - name: Create HTML template
+        run: |
+          # Create the HTML template dynamically in the repository
+          cat > template.html << 'EOL'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>$title$</title>
+          <style>
+          body {
+          max-width: 800px;
+          margin: 40px auto;
+          padding: 0 20px;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+          line-height: 1.6;
+          color: #333;
+          }
+          a { color: #0366d6; }
+          h1, h2, h3 { line-height: 1.2; }
+          img { max-width: 100%; }
+          .breadcrumbs {
+          margin-bottom: 20px;
+          padding: 10px;
+          background: #f6f8fa;
+          border-radius: 4px;
+          }
+          </style>
+          </head>
+          <body>
+          <div class="breadcrumbs">
+          <a href="/">Home</a> / $breadcrumbs$
+          </div>
+          <h1>$title$</h1>
+          $body$
+          </body>
+          </html>
+          EOL
+          
       - name: Convert "Welcome To My Notes!.md" to "index.html"
         run: |
-          # Convert the specific Markdown file to HTML
+          # Convert the specific Markdown file to HTML using the generated template
           pandoc "Welcome To My Notes!.md" \
           --from markdown \
           --to html \
