--- a/.github/workflows/convert.yaml
+++ b/.github/workflows/convert.yaml
@@ -1,4 +1,4 @@
-name: Convert Markdown to HTML and Deploy to GitHub Pages
+name: Convert Markdown to Single HTML and Deploy to GitHub Pages
 
 on:
   push:
@@ -36,131 +36,156 @@ jobs:
           <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>\$title\$</title>
+            <title>My Research Portfolio</title>
             <style>
               :root {
-                --text: #2d3748;
-                --heading: #1a202c;
-                --link: #3182ce;
-                --bg: #f7fafc;
+                --primary: #2d3748;
+                --secondary: #4a5568;
+                --accent: #2b6cb0;
+                --bg: #ffffff;
+                --bg-light: #f7fafc;
+                --border: #e2e8f0;
                 --code-bg: #f1f5f8;
-                --muted: #718096;
-                --breadcrumb-bg: #edf2f7;
+              }
+              * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
               }
               body {
-                max-width: 900px;
-                margin: 0 auto;
-                padding: 20px;
-                font-family: 'Georgia', serif;
-                line-height: 1.75;
-                color: var(--text);
+                font-family: 'Merriweather', serif;
+                line-height: 1.8;
+                color: var(--primary);
                 background: var(--bg);
+                max-width: 1200px;
+                margin: 0 auto;
+                padding: 40px 20px;
               }
-              h1, h2, h3 {
-                color: var(--heading);
-                font-family: 'Helvetica Neue', Arial, sans-serif;
-                margin: 1em 0 0.5em;
+              header {
+                text-align: center;
+                padding: 40px 0;
+                border-bottom: 2px solid var(--border);
+                margin-bottom: 40px;
+              }
+              h1 {
+                font-family: 'Lora', serif;
+                font-size: 2.5em;
+                color: var(--primary);
+                margin-bottom: 0.5em;
+              }
+              h2 {
+                font-family: 'Lora', serif;
+                font-size: 1.8em;
+                color: var(--accent);
+                margin: 1.5em 0 0.75em;
+                border-bottom: 1px solid var(--border);
+                padding-bottom: 0.25em;
+              }
+              h3 {
+                font-family: 'Lora', serif;
+                font-size: 1.4em;
+                color: var(--secondary);
+                margin: 1.25em 0 0.5em;
+              }
+              p {
+                margin-bottom: 1.5em;
               }
               a {
-                color: var(--link);
+                color: var(--accent);
                 text-decoration: none;
+                transition: color 0.2s;
               }
               a:hover {
+                color: #1a4971;
                 text-decoration: underline;
-              }
-              nav.breadcrumbs {
-                margin: 20px 0;
-                padding: 12px;
-                background: var(--breadcrumb-bg);
-                border-radius: 6px;
-                font-size: 0.9em;
-              }
-              nav.breadcrumbs a {
-                color: var(--muted);
               }
               pre, code {
                 background: var(--code-bg);
-                font-family: 'Fira Code', monospace;
-                border-radius: 4px;
+                font-family: 'JetBrains Mono', monospace;
+                border-radius: 6px;
               }
               code {
-                padding: 2px 6px;
+                padding: 0.2em 0.4em;
               }
               pre {
-                padding: 12px;
+                padding: 1em;
                 overflow-x: auto;
+                margin: 1.5em 0;
+                border: 1px solid var(--border);
               }
               img {
                 max-width: 100%;
-                border-radius: 4px;
-                margin: 1em 0;
+                display: block;
+                margin: 2em auto;
+                border-radius: 8px;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.1);
               }
               footer {
-                margin-top: 40px;
                 text-align: center;
-                color: var(--muted);
-                font-size: 0.85em;
-                padding: 20px 0;
-                border-top: 1px solid #e2e8f0;
+                padding: 40px 0;
+                color: var(--secondary);
+                font-size: 0.9em;
+                border-top: 2px solid var(--border);
+                margin-top: 60px;
+              }
+              .content {
+                background: var(--bg-light);
+                padding: 30px;
+                border-radius: 8px;
+                box-shadow: 0 4px 6px rgba(0,0,0,0.05);
               }
             </style>
+            <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Merriweather:wght@400;700&family=JetBrains+Mono&display=swap" rel="stylesheet">
           </head>
           <body>
-            <nav class="breadcrumbs">
-              <a href="/">Home</a>\$breadcrumbs\$
-            </nav>
-            <h1>\$title\$</h1>
-            \$body\$
+            <header>
+              <h1>My Research Portfolio</h1>
+            </header>
+            <div class="content">
+              \$body\$
+            </div>
             <footer>
-              © $YEAR - My Research Portfolio
+              © $YEAR - Curated Research and Notes
             </footer>
           </body>
           </html>
           EOF
 
-      - name: Convert Markdown to HTML
+      - name: Convert and merge Markdown to single HTML
         run: |
-          mkdir -p output
-          find . -type f -name "*.md" -not -path "./output/*" -not -path "./.git/*" -exec sh -c '
+          # Create a temporary file for combined Markdown
+          combined_md="combined.md"
+          echo "" > "$combined_md"
+          
+          # Find and process all Markdown files
+          find . -type f -name "*.md" -not -path "./.git/*" -exec sh -c '
             relpath="${1#./}"
-            dirpath="$(dirname "$relpath")"
             filename="$(basename "$1")"
             basefilename="${filename%.*}"
-            output_dir="output/$dirpath"
-            mkdir -p "$output_dir"
             
-            # Generate breadcrumbs
-            breadcrumbs=""
-            IFS="/" read -ra parts <<< "$dirpath"
-            current_path=""
-            for part in "${parts[@]}"; do
-              if [ -n "$part" ]; then
-                current_path="$current_path/$part"
-                breadcrumbs="$breadcrumbs / <a href=\"${current_path%/}\">${part}</a>"
-              fi
-            done
+            # Replace Obsidian [[links]] with standard Markdown links
+            sed -E "s/\[\[([^|]+)\]\]/[\1](#\1)/g" "$1" | \
+            sed -E "s/\[\[([^|]+)\|([^]]+)\]\]/[\2](#\1)/g" | \
+            sed "s/ /-/g" >> combined.md
             
-            # Convert to HTML
-            pandoc "$1" \
-              --from markdown+auto_identifiers \
-              --to html \
-              --template template.html \
-              --metadata title="${basefilename//-/ }" \
-              --metadata breadcrumbs="$breadcrumbs" \
-              --output "output/${relpath%.*}.html"
-            
-            # Handle index page
-            if [ "$filename" = "Welcome To My Notes!.md" ]; then
-              mv "output/${relpath%.*}.html" "output/index.html"
-            fi
+            # Add a separator between files
+            echo -e "\n---\n" >> combined.md
           ' sh {} \;
+          
+          # Convert combined Markdown to HTML
+          pandoc "$combined_md" \
+            --from markdown+auto_identifiers \
+            --to html \
+            --template template.html \
+            --output index.html
+            
+          # Clean up
+          rm "$combined_md"
 
       - name: Deploy to fresh gh-pages branch
         run: |
           git checkout --orphan gh-pages
           git rm -rf .
-          mv output/* .
-          rm -rf output
-          git add .
-          git commit -m "Deploy fresh HTML portfolio" || echo "Nothing to commit"
+          git add index.html
+          git commit -m "Deploy single-page HTML portfolio" || echo "Nothing to commit"
           git push -f origin gh-pages
