--- a/.github/workflows/convert.yaml
+++ b/.github/workflows/convert.yaml
@@ -1,30 +1,48 @@
-name: Generate HTML from Markdown
+name: Convert Obsidian Markdown to HTML and Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]  # Trigger on push to main branch
+  workflow_dispatch:   # Allow manual trigger
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-20.04
     steps:
-      - name: Checkout repository
+      # Check out the repository
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.8'
 
-      - name: Install dependencies
-        run: pip install markdown
+      # Install dependencies
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc wkhtmltopdf
+          pip install obsidianhtml
 
-      - name: Generate HTML
-        run: python generate_html.py
+      # Copy custom Python script into the workflow environment
+      - name: Copy Conversion Script
+        run: |
+          mkdir -p scripts
+          echo "${{ secrets.CONVERSION_SCRIPT }}" > scripts/convert_md_to_html.py
+          chmod +x scripts/convert_md_to_html.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      # Run conversion script
+      - name: Convert Markdown to HTML
+        run: |
+          python scripts/convert_md_to_html.py
+
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: output.html
-          path: output.html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+          publish_branch: gh-pages
+          force_orphan: true  # Ensures a clean history on gh-pages branch
